dreamkast/overlays/ui-30/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dreamkast
  annotations:
    kubernetes.io/ingress.class: contour
  labels:
    app: dreamkast
spec:
  rules:
    - host: dreamkast-ui-30.dev.cloudnativedays.jp
      http:
        paths:
          - path: /
            backend:
              serviceName: dreamkast
              servicePort: 80
          - path: /cndo2021/ui
            backend:
              serviceName: dreamkast-ui
              servicePort: 3001
